Implementando tela de detalhes da partida e finalizando app

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         <activity
             android:name=".ui.Details"
             android:theme="@style/Theme.MatchSimulator.NoActionBar"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".ui.MainActivity"/>
 
         <activity
             android:name=".ui.MainActivity"
